Added obstacles and collision

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Baja Driver – Minimum Demo</title>
+  <title>Baja Driver – Final</title>
   <style>
     html, body { margin: 0; height: 100%; overflow: hidden; }
     #app { width: 100%; height: 100%; display: block; }
