--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Baja Driver – Minimum Demo</title>
-  <style>
-    html, body { margin: 0; height: 100%; overflow: hidden; }
-    #app { width: 100%; height: 100%; display: block; }
-  </style>
-</head>
-<body>
-  <canvas id="app"></canvas>
-  <script type="module" src="/src/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Baja Driver</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+      }
+      #app {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
+    <canvas id="app"></canvas>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
